--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8>
   <meta name = "viewpoint" content="width=device=width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<title>Module 2 Solution</title>                                                                     
  </head>
  <body>
  <h1>Our Menu</h1>
